k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopcarts
spec:
  type: ClusterIP
  selector:
    app: shopcarts
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
